[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI_prelife"
version = "0.2.0"
description = "ComfyUI custom nodes for image analysis and preprocessing (V3 API)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "prelife", email = "prelife@example.com"}
]
keywords = ["comfyui", "custom-nodes", "image-analysis", "v3-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/prelife/ComfyUI_prelife"
Repository = "https://github.com/prelife/ComfyUI_prelife"
Issues = "https://github.com/prelife/ComfyUI_prelife/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodes*"]
